crates/scrap4rs/tests/snapshots/parser_snapshots__snapshot_proptest_shell.snap
---
source: crates/scrap4rs/tests/parser_snapshots.rs
expression: file
---
path: tests/fixtures/runner_shells/proptest_shell.rs
tests:
  - identity:
      file_path: tests/fixtures/runner_shells/proptest_shell.rs
      qualified_name: it
      span:
        start_line: 12
        end_line: 17
        start_column: 1
        end_column: 1
    attributes:
      - name: test
        raw: ~
    assertions: []
    body_line_count: 4
    implicit_assertion_sources:
      - proptest
    opt_outs: []
    behavioral_facts: []
diagnostics: []
