crates/scrap4rs/tests/snapshots/parser_snapshots__snapshot_should_panic_shell.snap
---
source: crates/scrap4rs/tests/parser_snapshots.rs
expression: file
---
path: tests/fixtures/runner_shells/should_panic_shell.rs
tests:
  - identity:
      file_path: tests/fixtures/runner_shells/should_panic_shell.rs
      qualified_name: it
      span:
        start_line: 10
        end_line: 15
        start_column: 1
        end_column: 2
    attributes:
      - name: test
        raw: ~
      - name: should_panic
        raw: ~
    assertions: []
    body_line_count: 3
    implicit_assertion_sources:
      - should_panic
    opt_outs: []
    behavioral_facts:
      - result_asserted
diagnostics: []
