crates/scrap4rs/tests/snapshots/parser_snapshots__snapshot_tautological.snap
---
source: crates/scrap4rs/tests/parser_snapshots.rs
expression: file
---
path: tests/fixtures/true_positives/tautological.rs
tests:
  - identity:
      file_path: tests/fixtures/true_positives/tautological.rs
      qualified_name: assert_true_is_tautological
      span:
        start_line: 11
        end_line: 15
        start_column: 1
        end_column: 2
    attributes:
      - name: test
        raw: ~
    assertions:
      - name: assert
        raw_args: "true"
        span:
          start_line: 13
          end_line: 13
          start_column: 5
          end_column: 18
        arguments_identical: false
        single_arg_value:
          kind: bool
          value: true
      - name: assert_eq
        raw_args: "1 , 1"
        span:
          start_line: 14
          end_line: 14
          start_column: 5
          end_column: 21
        arguments_identical: true
    body_line_count: 3
    implicit_assertion_sources: []
    opt_outs: []
    behavioral_facts: []
diagnostics: []
