crates/scrap4rs/tests/snapshots/parser_snapshots__snapshot_zero_assertion.snap
---
source: crates/scrap4rs/tests/parser_snapshots.rs
expression: file
---
path: tests/fixtures/true_positives/zero_assertion.rs
tests:
  - identity:
      file_path: tests/fixtures/true_positives/zero_assertion.rs
      qualified_name: no_assertions_at_all
      span:
        start_line: 9
        end_line: 13
        start_column: 1
        end_column: 1
    attributes:
      - name: test
        raw: ~
    assertions: []
    body_line_count: 3
    implicit_assertion_sources: []
    opt_outs: []
    behavioral_facts: []
diagnostics: []
